--- a/todolist/src/index.html
+++ b/todolist/src/index.html
@@ -4,6 +4,7 @@
     </head>
     <body>
         <div id="root"></div>
+        <div id="root2"></div>
         <script src="index.pack.js"></script>
     </body>
 </html>
